AWCReporingApplication/force-app/main/default/objects/Accommodation__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments:</label>
    <type>TextArea</type>
</CustomField>