AWCReporingApplication/force-app/main/default/objects/Accommodation__c/fields/Nightly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Nightly_Rate__c</fullName>
    <label>Nightly Rate</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>