AWCReporingApplication/force-app/main/default/objects/Accommodation__c/fields/Number_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Nights__c</fullName>
    <label>Number of Nights</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>