AWCReporingApplication/force-app/main/default/objects/Accommodation__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>